# aws-lambda-python

./: .gitignore  .gitmodules  LICENSE  README.md  aws-available-regions.yaml  caa.tf  clean.sh  config.example.yaml  config.yaml  configure.py  deploy.sh  get_api_key.py  get_api_url.py  main.tf  package-layer.sh  pyproject.toml  requirements.txt  validation.tf  zip-all.sh
.github/workflows/: main.yml
lambda_caa_resolver/: lambda_function.py
lambda_controller/: lambda_function.py
lambda_validator/: lambda_function.py
layer/: 1-install.sh  2-package.sh  package.sh  requirements.txt
open-tofu/: .terraform.lock.hcl  api_method_mpic.tf  aws-perspective.tf.template  aws-provider.tf.template  caa.tf  eventbridge_warmer.tf  main.tf.template  terraform.tfvars.example  validation.tf  validationwithcaa.tf  variables.tf  variables.tf.example
open_mpic_core_python/: README.md  pyproject.toml
open_mpic_core_python/src/open_mpic_core/common_domain/: check_response.py
open_mpic_core_python/src/open_mpic_core/common_domain/enum/: dcv_validation_method.py
open_mpic_core_python/src/open_mpic_core/mpic_coordinator/: mpic_response_builder.py
open_mpic_core_python/src/open_mpic_core/mpic_coordinator/domain/: mpic_request.py  mpic_request_validation_error.py  mpic_response.py  remote_check_call_configuration.py
open_mpic_core_python/src/open_mpic_core/mpic_dcv_checker/: mpic_dcv_checker.py
open_mpic_core_python/tests/unit/open_mpic_core/: test_mpic_caa_checker.py  test_mpic_request_validator.py  test_mpic_response_builder.py
open_mpic_core_python/tests/unit/test_util/: mock_dns_object_creator.py
resources/: aws_region_config.yaml
src/aws_lambda_mpic/mpic_caa_checker_lambda/: mpic_caa_checker_lambda_function.py
src/aws_lambda_mpic/mpic_coordinator_lambda/: mpic_coordinator_lambda_function.py
src/aws_lambda_mpic/mpic_dcv_checker_lambda/: mpic_dcv_checker_lambda_function.py
src/aws_lambda_python/common_domain/: base_check_request.py  base_check_response.py  caa_check_parameters.py  caa_check_request.py  caa_check_response.py  check_parameters.py  check_request.py  check_response.py  dcv_check_parameters.py  dcv_check_request.py  errors.py  validation_error.py
src/aws_lambda_python/common_domain/command/: caa_check_command.py  dcv_check_command.py
src/aws_lambda_python/common_domain/enum/: dcv_validation_method.py  dns_record_type.py
src/aws_lambda_python/lambda_caa_resolver/: lambda_function.py
src/aws_lambda_python/lambda_controller/: lambda_function.py  mpic_coordinator.py  mpic_coordinator_lambda_function.py  mpic_orchestrator.py  mpic_orchestrator_lambda_function.py
src/aws_lambda_python/lambda_mpic_coordinator/: mpic_coordinator.py  mpic_coordinator_lambda_function.py
src/aws_lambda_python/lambda_validator/: lambda_function.py
src/aws_lambda_python/mpic_caa_checker/: mpic_caa_checker.py
src/aws_lambda_python/mpic_caa_checker_lambda/: mpic_caa_checker_lambda_function.py
src/aws_lambda_python/mpic_coordinator/: cohort_creator.py  mpic_coordinator.py  mpic_request_validation_issue.py  mpic_request_validator.py  mpic_response_builder.py  validation_issue.py
src/aws_lambda_python/mpic_coordinator/config/: service_config.py
src/aws_lambda_python/mpic_coordinator/domain/: aws_region.py  base_mpic_request.py  certificate_type.py  check_type.py  dcv_validation_method.py  mpic_caa_request.py  mpic_command.py  mpic_dcv_request.py  mpic_dcv_with_caa_request.py  mpic_orchestration_parameters.py  mpic_request.py  mpic_response.py  remote_check_call_configuration.py  remote_perspective.py  request_path.py  request_paths.py  valid_aws_region.py
src/aws_lambda_python/mpic_coordinator/domain/enum/: request_path.py
src/aws_lambda_python/mpic_coordinator/messages/: mpic_request_validation_messages.py  validation_messages.py
src/aws_lambda_python/mpic_coordinator_lambda/: mpic_coordinator_lambda_function.py
src/aws_lambda_python/mpic_dcv_checker/: mpic_dcv_checker.py
src/aws_lambda_python/mpic_dcv_checker_lambda/: mpic_dcv_checker_lambda_function.py
src/open_mpic_core/common_domain/: check_parameters.py  check_request.py  check_response.py  remote_perspective.py  validation_error.py
src/open_mpic_core/common_domain/messages/: ErrorMessages.py
src/open_mpic_core/mpic_caa_checker/: mpic_caa_checker.py
src/open_mpic_core/mpic_coordinator/: cohort_creator.py  mpic_coordinator.py  mpic_request_validation_issue.py  mpic_request_validator.py  mpic_response_builder.py
src/open_mpic_core/mpic_coordinator/domain/: mpic_request.py  mpic_response.py
src/open_mpic_core/mpic_coordinator/domain/enum/: request_path.py
src/open_mpic_core/mpic_coordinator/messages/: mpic_request_validation_messages.py
src/open_mpic_core/mpic_dcv_checker/: mpic_dcv_checker.py
tests/: test_mpic_orchestrator.py  test_mpic_orchestrator_function.py
tests/integration/: test_deployed_mpic_api.py  test_smoke_deployed_mpic_api.py  testing_api_client.py
tests/resources/: test_region_config.yaml
tests/unit/: mock_dns_object_creator.py  test_cohort_creator.py  test_mpic_caa_checker.py  test_mpic_caa_request.py  test_mpic_coordinator.py  test_mpic_coordinator_lambda.py  test_mpic_dcv_checker.py  test_mpic_dcv_request.py  test_mpic_dcv_with_caa_request.py  test_mpic_orchestrator.py  test_mpic_request_validator.py  test_mpic_response_builder.py  valid_check_creator.py  valid_mpic_request_creator.py  valid_request_creator.py
tests/unit/aws_lambda/: test_caa_checker_lambda.py  test_dcv_checker_lambda.py  test_mpic_coordinator_lambda.py
tests/unit/aws_lambda_mpic/: conftest.py  test_caa_checker_lambda.py  test_dcv_checker_lambda.py  test_mpic_coordinator_lambda.py
tests/unit/open_mpic_core/: test_cohort_creator.py  test_mpic_caa_checker.py  test_mpic_caa_request.py  test_mpic_coordinator.py  test_mpic_dcv_checker.py  test_mpic_dcv_request.py  test_mpic_dcv_with_caa_request.py  test_mpic_request_validator.py  test_mpic_response_builder.py
tests/unit/test_util/: valid_check_creator.py  valid_mpic_request_creator.py
