[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-lambda-python"
dynamic = ["version"]
description = 'MPIC standard API implementation leveraging AWS Lambda.'
readme = "README.md"
requires-python = "==3.11.9"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Birge-Lee", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pyyaml==6.0.1",
    "requests>=2.32.3",
    "dnspython==2.6.1",
]  # consider splitting -- configure.py needs pyyaml, while the aws functions need requests and dnspython

[project.optional-dependencies]
provided = [
    "boto3~=1.34.141",
]
test = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
]

[project.urls]
Documentation = "https://github.com/open-mpic/aws-lambda-python"
Issues = "https://github.com/open-mpic/aws-lambda-python/issues"
Source = "https://github.com/open-mpic/aws-lambda-python"

#[dirs.env]
#virtual = ".hatch"

[tool.hatch]
version.path = "src/aws_lambda_python/__about__.py"
build.sources = ["src"]
build.targets.wheel.packages = ["src/aws_lambda_python"]

[tool.hatch.envs.default]
skip-install = false
type="virtual"
path="venv"

[tool.hatch.envs.test]
features = [
    "test",
    "provided"
]

[tool.hatch.envs.hatch-test]
features = [
    "test",
    "provided"
]

[tool.pytest.ini_options]
pythonpath = [
    "src","."  # need root directory because it has some python files we are importing for integration tests
]
testpaths = [
    "tests/unit",
    "tests/integration",
]
python_functions = [
    "*_should_*",
]
markers = [
    "integration: mark test as an integration test",
    "unit: mark test as a unit test",  # optional
]
addopts = [
    "--import-mode=prepend",  # explicit default, as the tests rely on it for proper import resolution
]

#envs.types.extra-dependencies = [
#  "mypy>=1.0.0",
#  "pytest==8.2.2"
#]
#envs.types.scripts.check = "mypy --install-types --non-interactive {args:src/aws_lambda_python tests}"

#[tool.coverage]
#run.source_pkgs = ["aws_lambda_python", "tests"]
#run.branch = true
#run.parallel = true
#run.omit = [
#  "src/aws_lambda_python/__about__.py",
#]
#paths.aws_lambda_python = ["src/aws_lambda_python", "*/aws-lambda-python/src/aws_lambda_python"]
#paths.tests = ["tests", "*/aws-lambda-python/tests"]
#report.exclude_lines = [
#  "no cov",
#  "if __name__ == .__main__.:",
#  "if TYPE_CHECKING:",
#]
